--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,13 +1,15 @@
 name: Generate Snake
 
 on:
-  schedule: 
-    - cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"  # Har din raat 12 baje
   workflow_dispatch:
 
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write   # 👈 ye line zaroori hai branch banane ke liye
 
     steps:
       - name: Checkout
@@ -19,9 +21,14 @@ jobs:
           github_user_name: svpcet-code
           outputs: dist/snake.svg
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: output
-          publish_dir: dist
+      - name: Push Snake to output branch
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin
+          git switch --orphan output
+          git rm -rf .
+          cp dist/snake.svg snake.svg
+          git add snake.svg
+          git commit -m "Generate snake"
+          git push -f origin output
